--- a/package.json
+++ b/package.json
@@ -2,10 +2,23 @@
   "name": "@facing/property-designer",
   "version": "1.0.3",
   "description": "Property designer",
-  "main": "dist/index.js",
+  "type": "module",
+  "module": "./dist/esm/index.mjs",
+  "types": "./dist/esm/index.d.mts",
+  "exports": {
+    ".": {
+      "import": "./dist/esm/index.mjs",
+      "types": "./dist/esm/index.d.mts"
+    }
+  },
   "scripts": {
-    "build": "./node_modules/.bin/tsc",
-    "watch": "./node_modules/.bin/tsc --watch"
+    "test": "jest",
+    "build": "npm run build:esm",
+    "lint": "npm exec -c './node_modules/.bin/eslint ./src'",
+    "watch": "npm run watch:esm",
+    "watch:esm": "npm exec -c './node_modules/.bin/tsc --build ./tsconfig/tsconfig.esm.json --watch'",
+    "build:esm": "npm exec -c './node_modules/.bin/tsc --build ./tsconfig/tsconfig.esm.json'",
+    "prepare": "husky"
   },
   "keywords": [
     "property designer"
@@ -13,9 +26,14 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "typescript": "latest"
+    "typescript": "latest",
+    "@jest/globals": "^29.7.0",
+    "eslint": "^8.57.0",
+    "husky": "^9.0.11",
+    "jest": "^29.7.0",
+    "typescript-eslint": "^7.0.2",
+    "ts-jest": "^29.2.4"
   },
-  "types": "dist/index.d.ts",
   "dependencies": {
     "@types/lodash-es": "^4.17.7",
     "lodash-es": "^4.17.21",
